--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
@@ -2,9 +2,9 @@
 @using Zbang.Zbox.Infrastructure.Enums.Resources
 <div class="badges">
     <div class="badges-bar">
-        <div class="info">
+        @*<div class="info">
             <md-icon md-svg-icon="p:q-mark" class="" ng-click="g.showInfo()"></md-icon>
-        </div>
+        </div>*@
         <md-tabs class="badges-tabs" md-dynamic-height="true">
             <md-tab ui-sref="user.badge({type:level})" md-active="g.badgesTab === g.badgesState.levels">
                 <md-tab-label><h4>@GamificationResources.Levels</h4></md-tab-label>
