--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
@@ -1,10 +1,11 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.User.Resources
 @using Zbang.Zbox.Infrastructure.Enums.Resources
+@model Zbang.Cloudents.Mvc4WebRole.Models.Gamification
 <div class="badges">
     <div class="badges-bar">
         @*<div class="info">
-            <md-icon md-svg-icon="p:q-mark" class="" ng-click="g.showInfo()"></md-icon>
-        </div>*@
+                <md-icon md-svg-icon="p:q-mark" class="" ng-click="g.showInfo()"></md-icon>
+            </div>*@
         <md-tabs class="badges-tabs" md-dynamic-height="true">
             <md-tab ui-sref="user.badge({type:'level'})" md-active="g.isActive('level')">
                 <md-tab-label><h4>@GamificationResources.Levels</h4></md-tab-label>
@@ -21,50 +22,70 @@
         <div ng-switch-when="level" class="tab levels">
             <md-icon md-svg-icon="p:stars" class="bg"></md-icon>
             <ul>
-                <li class="level">
-                    <div class="title">
-                        <div class="image"></div>
-                        <div class="name">@Gamification.Level1</div>
-                    </div>
-                    <div class="body">
-                        @GamificationResources.LevelFreshmanBody
-                        <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="80"></md-progress-linear>
-                        @*<div class="counter">200,000 Students</div>*@
-                    </div>
-                </li>
-                <li class="level">
-                    <div class="title">
-                        <div class="image"></div>
-                        <div class="name">@Gamification.Level2</div>
-                    </div>
-                    <div class="body">
-                        @GamificationResources.LevelSophomoreBody
-                        <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="80"></md-progress-linear>
-                        @*<div class="counter">200,000 Students</div>*@
-                    </div>
-                </li>
-                <li class="level">
-                    <div class="title">
-                        <div class="image"></div>
-                        <div class="name">@Gamification.Level3</div>
-                    </div>
-                    <div class="body">
-                        @GamificationResources.LevelUpperclassmanBody
-                        <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="80"></md-progress-linear>
-                        @*<div class="counter">200,000 Students</div>*@
-                    </div>
-                </li>
-                <li class="level">
-                    <div class="title">
-                        <div class="image"></div>
-                        <div class="name">@Gamification.Level4</div>
-                    </div>
-                    <div class="body">
-                        @GamificationResources.LevelStraightAStudentBody
-                        <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="80"></md-progress-linear>
-                        @*<div class="counter">200,000 Students</div>*@
-                    </div>
-                </li>
+                @foreach (var level in Model.Levels)
+                {
+                    <li class="level">
+                        <div class="title">
+                            <div class="image"></div>
+                            <div class="name">@level.Name</div>
+                        </div>
+                        <div class="body">
+                            @level.Description
+                            @{ string progress = "g.levels.l" + level.Index + ".progress"; }
+                            <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{@progress}}"></md-progress-linear>
+                        </div>
+                    </li>
+                                }
+                @*<li class="level">
+                        <div class="title">
+                            <div class="image"></div>
+                            <div class="name">@Gamification.Level1</div>
+                        </div>
+                        <div class="body">
+                            @GamificationResources.LevelFreshmanBody
+                            <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{::g.level1.progress}}"></md-progress-linear>
+                        </div>
+                    </li>
+                    <li class="level">
+                        <div class="title">
+                            <div class="image"></div>
+                            <div class="name">@Gamification.Level2</div>
+                        </div>
+                        <div class="body">
+                            @GamificationResources.LevelSophomoreBody
+                            <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{::g.level2.progress}}"></md-progress-linear>
+                        </div>
+                    </li>
+                    <li class="level">
+                        <div class="title">
+                            <div class="image"></div>
+                            <div class="name">@Gamification.Level3</div>
+                        </div>
+                        <div class="body">
+                            @GamificationResources.LevelUpperclassmanBody
+                            <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{::g.level3.progress}}"></md-progress-linear>
+                        </div>
+                    </li>
+                    <li class="level">
+                        <div class="title">
+                            <div class="image"></div>
+                            <div class="name">@Gamification.Level4</div>
+                        </div>
+                        <div class="body">
+                            @GamificationResources.LevelStraightAStudentBody
+                            <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{::g.level4.progress}}"></md-progress-linear>
+                        </div>
+                    </li>
+                    <li class="level">
+                        <div class="title">
+                            <div class="image"></div>
+                            <div class="name">@Gamification.Level5</div>
+                        </div>
+                        <div class="body">
+                            @GamificationResources.LevelStraightAStudentBody
+                            <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{::g.level5.progress}}"></md-progress-linear>
+                        </div>
+                    </li>*@
             </ul>
         </div>
         <div ng-switch-when="badge" class="tab badges">
