--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
@@ -81,7 +81,7 @@
             </div>
             <div class="content">
                 <div class="filters" layout="row" layout-padding layout-wrap>
-                    <div class="filter-wrapper" flex-lg="20" flex-md="25" flex-gt-lg="20" flex-xs="50" flex-sm="25">
+                    @*<div class="filter-wrapper" flex-lg="20" flex-md="25" flex-gt-lg="20" flex-xs="50" flex-sm="25">
                         <md-input-container class="dates action-btn">
                             <md-select ng-model="g.communityFilter">
                                 <md-option value="This Month">This Month</md-option>
@@ -90,7 +90,7 @@
                                 <md-option value="Filter 3">Filter 3</md-option>
                             </md-select>
                         </md-input-container>
-                    </div>
+                    </div>*@
                     <div class="filter-wrapper" flex-lg="20" flex-md="25" flex-gt-lg="20" flex-xs="50" flex-sm="25">
                         <button type="button" ng-click="g.goToSelf()" class="action-btn">Show Myself</button>
                     </div>
